guarde los cambios hechos en myrama

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
 	<div id="grilla">
-		<header class="border">Header</header>
-		<section id="productos" class="border">Section</section>
-		<section id="servicios" class="border">Section</section>
-		<nav class="border">Navegacion</nav>
-		<aside class="border">Aside</aside>			<footer class="border">Pie de Pagina</footer>
+		<header class="border">Viajes</header>
+		<section id="productos" class="border">Destinos</section>
+		<section id="servicios" class="border">Ofertas y Novedades</section>
+		<nav class="border">Menu de Navegacion</nav>
+		<aside class="border">Listado de Viajes</aside>			
+		<footer class="border">Redes sociales</footer>
 	</div>
 </body>
 </html>
